--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,9 +16,8 @@ FROM --platform=linux/arm64 nginx:alpine
 # Copier le build de l'application
 COPY --from=builder /app/dist/frontend/browser /usr/share/nginx/html
 
-# Copier la configuration nginx personnalisée
-# On utilise le chemin relatif depuis le contexte
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+# Nous ne copions pas la configuration nginx ici car elle sera montée en volume
+# COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
